--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import Layout from '../layouts/Layout.astro'
 
   <section>
     <h2 class="text-lg font-medium text-amber-500">Contact</h2>
-    <p class="text-neutral-400">hello@resonantsystems.dev</p>
+    <p class="text-neutral-400">resonantsystems.dev@gmail.com</p>
   </section>
 </Layout>
 
