--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -182,7 +182,7 @@ import Layout from "../layouts/Layout.astro";
     <div>
       <h3 class="text-lg font-medium mb-2">Open Audio Protocol</h3>
       <p class="text-[#222222]/80 mb-3">
-        Core architect and contributor to the design and Go implementation of
+        Founding architect and contributor to the design and Go implementation of
         the Open Audio Protocol while at Audius. Work focused on protocol
         abstractions and developer tooling. This work predates Resonant Systems
         and is maintained externally.
