--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -225,10 +225,10 @@ import Layout from "../layouts/Layout.astro";
       <li>
         Email:
         <a
-          href="mailto:resonantsystems.dev@gmail.com"
+          href="mailto:hello@resonantsystems.dev"
           class="underline hover:text-amber-600"
         >
-          resonantsystems.dev@gmail.com
+          hello@resonantsystems.dev
         </a>
       </li>
     </ul>
